refactorizacion de seccion experiencia

--- a/src/app/aboutme/components/about-experience/about-experience.component.css
+++ b/src/app/aboutme/components/about-experience/about-experience.component.css
@@ -1,9 +1,9 @@
 .animAmatech {
-  opacity: 0; /* inicia invisible */
+  opacity: 0;
   transform: translateY(100px);
 }
 
 .animSmyt {
-  opacity: 0; /* inicia invisible */
+  opacity: 0;
   transform: translateY(100px);
 }
