--- a/src/app/aboutme/components/about-projects/about-projects.component.html
+++ b/src/app/aboutme/components/about-projects/about-projects.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center bg-black pt-30 pb-5 text-white">
+<div class="flex justify-center bg-black pt-30 p-10 text-white">
   <div class="flex flex-col items-start w-full max-w-6xl">
     <h2 class="text-2xl md:text-3xl bg-clip-text text-transparent bg-gradient-to-r from-purple-500 to-red-600">Proyectos creados a partir de una idea</h2>
     <h1 class="text-5xl md:text-7xl font-bold leading-tight  pb-26">Mis Proyectos Personales</h1>
