--- a/src/app/aboutme/pages/abaout-me-page/abaout-me-page.component.html
+++ b/src/app/aboutme/pages/abaout-me-page/abaout-me-page.component.html
@@ -1,13 +1,11 @@
 <app-navbar />
-<div class="flex flex-col">
-  <section>
-    <about-bio-page />
-  </section>
-  <section>
-    <about-experience/>
-  </section>
-  <section>
-    <about-projects />
-  </section>
-</div>
+<section id="info-about-me">
+  <about-bio-page />
+</section>
+<section id="experience">
+  <about-experience/>
+</section>
+<section id="projects">
+  <about-projects />
+</section>
 
