--- a/src/app/aboutme/components/shared/navbar/navbar.component.html
+++ b/src/app/aboutme/components/shared/navbar/navbar.component.html
@@ -18,10 +18,10 @@
           <a routerLink="/"  fragment="info-about-me" (click)="scrollToSection('info-about-me')"  class="block py-2 px-3 text-white bg-purple-700 rounded-sm md:bg-transparent md:text-purple-700 md:p-0 dark:text-white md:dark:text-purple-500" aria-current="page">About Me</a>
         </li>
         <li>
-          <a routerLink="/" fragment="experience" (click)="scrollToSection('experience')"  class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-purple-700 md:p-0 dark:text-white md:dark:hover:text-purple-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Experiencia</a>
+          <a routerLink="/" fragment="experience" (click)="scrollToSection('experience')"  class="block py-2 px-3 text-whiterounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-purple-700 md:p-0 dark:text-white md:dark:hover:text-purple-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Experiencia</a>
         </li>
         <li>
-          <a routerLink="/" fragment="projects" (click)="scrollToSection('projects')" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-purple-700 md:p-0 dark:text-white md:dark:hover:text-purple-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Proyectos</a>
+          <a routerLink="/" fragment="projects" (click)="scrollToSection('projects')" class="block py-2 px-3 text-white rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-purple-700 md:p-0 dark:text-white md:dark:hover:text-purple-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Proyectos</a>
         </li>
         <!-- <li>
           <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-purple-700 md:p-0 dark:text-white md:dark:hover:text-purple-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Habilidades</a>
