--- a/src/app/aboutme/components/about-experience/about-experience.component.html
+++ b/src/app/aboutme/components/about-experience/about-experience.component.html
@@ -10,7 +10,7 @@
         <div class="flex flex-col items-end">
           <h1 class="font-bold text-1xl md:text-2xl">Amatech S.A. de C.V.</h1>
           <h1 class="font-bold text-3xl md:text-4xl bg-clip-text text-transparent bg-gradient-to-r from-pink-400 to-blue-400">Analista de Desarrollo</h1>
-          <h1 class="text-1xl md:text-2xl text-blue-200">Agosto 2024 - Septiembre 2025</h1>
+          <h1 class="text-1xl md:text-2xl text-blue-200">Agosto 2024 - Agosto 2025</h1>
         </div>
       </div>
 
