--- a/src/app/aboutme/components/shared/footer/footer.component.html
+++ b/src/app/aboutme/components/shared/footer/footer.component.html
@@ -10,10 +10,10 @@
   <nav>
     <h6 class="footer-title">Contacto</h6>
     <div class="grid grid-flow-col gap-4">
-      <a class="cursor-pointer">
+      <a class="cursor-pointer" (click)="goToLink('https://www.linkedin.com/in/alejandro-mora-892a88314/')">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"/></svg>
       </a>
-      <a class="cursor-pointer">
+      <a class="cursor-pointer" (click)="goToLink('https://github.com/alexxware')">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 16 16"><path fill="currentColor" fill-rule="evenodd" d="M16 8c0 4.42-3.58 8-8 8s-8-3.58-8-8s3.58-8 8-8s8 3.58 8 8m-9.64 6.81v-1.49c-1.9.426-2.31-.852-2.31-.852c-.306-.828-.758-1.04-.758-1.04c-.622-.438.045-.438.045-.438c.69.047 1.05.734 1.05.734c.611 1.09 1.6.781 1.99.592c.057-.462.238-.781.43-.959c-1.52-.166-3.11-.781-3.11-3.53c0-.781.271-1.42.702-1.92c-.068-.177-.306-.911.068-1.89c0 0 .577-.189 1.88.734a6.4 6.4 0 0 1 1.71-.237c.577 0 1.17.083 1.71.237c1.3-.923 1.88-.734 1.88-.734c.374.982.136 1.72.068 1.89c.442.497.702 1.14.702 1.92c0 2.75-1.6 3.35-3.12 3.53c.25.225.501.651.501 1.33v2.09a7 7 0 0 0 5.21-6.77c0-3.87-3.13-7-7-7s-7 3.13-7 7c0 3.3 2.29 6.07 5.36 6.81z" clip-rule="evenodd"/></svg>
       </a>
     </div>
